kubernetes/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins-master
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: agent-jnlp
      protocol: TCP
      port: 50000
      targetPort: 50000
  type: NodePort
