kubernetes/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    # Use NGINX Ingress Controller
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: jenkins.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
